Various minor fixes and improvements
- Fixed a bug that was causing incorrect artist name to appear for some
tracks on single-artist releases if those tracks contained a " - "
string in their title.
- Fixed a bug that resulted in release artwork image not being displayed
on a player form for releases loaded using https URLs.
- Search queries and tags that contain characters beyond the standard
US-ASCII character set are now supported and properly submitted in
encoded form to a Bandcamp website for searching.
- Release info text area on the player form in addition to release
information and tags, now also displays artist name, title, published
and released dates, download type and release time.
- Player control buttons and "Load Release" button now respond to Enter
key press (when focused) by triggering button's action.
- Version changed to 0.3.1.
- Various small changes.